[gd_scene load_steps=9 format=3 uid="uid://fl18upfqm2ey"]

[ext_resource type="Texture2D" uid="uid://cslxfhh3r5hq7" path="res://UI/Sprites/Cursor.png" id="1"]
[ext_resource type="Theme" uid="uid://7l22upj7t1q7" path="res://UI/DefaultUITheme.tres" id="2_7k1p8"]
[ext_resource type="Texture2D" uid="uid://b1qlx277g7jwu" path="res://UI/Sprites/gui_gradient.png" id="4"]
[ext_resource type="Script" path="res://Entity/EntityManager/PartyStats.gd" id="5"]
[ext_resource type="Script" path="res://Entity/EntityManager/FieldUI.gd" id="6"]

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("4")
region = Rect2(160, 224, 64, 64)

[sub_resource type="Animation" id="12"]
resource_name = "Hover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.69024, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjr54"]
_data = {
"Hover": SubResource("12")
}

[node name="FieldUI" type="CanvasLayer"]
script = ExtResource("6")

[node name="PartyStats" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -75.0
offset_right = -10.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_7k1p8")
alignment = 2
script = ExtResource("5")

[node name="Names" type="VBoxContainer" parent="PartyStats"]
layout_mode = 2
theme = ExtResource("2_7k1p8")
alignment = 2

[node name="Name3" type="Label" parent="PartyStats/Names"]
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "Test"

[node name="Name2" type="Label" parent="PartyStats/Names"]
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "sasgdsadgsd"

[node name="Name1" type="Label" parent="PartyStats/Names"]
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "Mediumis"

[node name="Spacer" type="VBoxContainer" parent="PartyStats"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme = ExtResource("2_7k1p8")
alignment = 2

[node name="1" type="Label" parent="PartyStats/Spacer"]
visible = false
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "        "

[node name="2" type="Label" parent="PartyStats/Spacer"]
visible = false
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "        "

[node name="3" type="Label" parent="PartyStats/Spacer"]
visible = false
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "        "

[node name="HP" type="VBoxContainer" parent="PartyStats"]
layout_mode = 2
theme = ExtResource("2_7k1p8")
alignment = 2

[node name="HP3" type="Label" parent="PartyStats/HP"]
visible = false
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "1"

[node name="HP2" type="Label" parent="PartyStats/HP"]
visible = false
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "259"

[node name="HP1" type="Label" parent="PartyStats/HP"]
visible = false
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "1239"

[node name="ActionMenu" type="NinePatchRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.498039)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -70.0
offset_right = 85.0
offset_bottom = -10.0
size_flags_horizontal = 3
theme = ExtResource("2_7k1p8")
texture = SubResource("10")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ActionMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -20.0
theme = ExtResource("2_7k1p8")

[node name="Command1" type="Label" parent="ActionMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "Ability"
uppercase = true

[node name="Command2" type="Label" parent="ActionMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "SPELLS"
uppercase = true

[node name="Command3" type="Label" parent="ActionMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7k1p8")
text = "ITEM"
uppercase = true

[node name="Pointer" type="TextureRect" parent="ActionMenu"]
layout_mode = 0
offset_left = 6.45819
offset_top = 8.0
offset_right = 50.0
offset_bottom = 48.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("2_7k1p8")
texture = ExtResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ActionMenu/Pointer"]
libraries = {
"": SubResource("AnimationLibrary_jjr54")
}
